tekton/require-tekton-namespace-pipelinerun/.chainsaw-test/good-pipelinerun.yaml
apiVersion: tekton.dev/v1
kind: PipelineRun
metadata:
  name: goodpipelinerun01
  namespace: req-tekton-ns
spec:
  pipelineRef:
    name: mypipeline
    bundle: docker.io/foo/bar
