tekton/require-tekton-namespace-pipelinerun/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-tekton-namespace-pipelinerun
policies:
- ../require-tekton-namespace-pipelinerun.yaml
resources:
- ../.chainsaw-test/bad-pipelinerun.yaml
- ../.chainsaw-test/good-pipelinerun.yaml
results:
- policy: require-tekton-namespace-pipelinerun
  rule: check-pipelinerun-namespace
  kind: PipelineRun
  resources:
  - badpipelinerun01
  result: fail
- policy: require-tekton-namespace-pipelinerun
  rule: check-pipelinerun-namespace
  kind: PipelineRun
  resources:
  - goodpipelinerun01
  result: pass
